--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 body {
-   font-family: Verdana, Tahoma;
-   background-color:#000000;
-   margin:50px 200px;
-   margin-bottom: 150px;
-   background-image: url("images/matrixbackground.jpg");
-   background-repeat: repeat-x;
-   background-position: 0px 140px;
-   background-attachment: fixed;
-   overflow:auto;
+	font-family: Verdana, Tahoma;
+	background-color:#000000;
+	margin:50px 200px;
+	margin-bottom: 150px;
+	background-image: url("images/matrixbackground.jpg");
+	background-repeat: repeat-x;
+	background-position: 0px 140px;
+	background-attachment: fixed;
+	overflow:auto;
 }
 
 .fb-like {
-height:40px;
-margin:0px;
-padding:0px;
+	height:40px;
+	margin:0px;
+	padding:0px;
 }
 
 h1 {
@@ -47,10 +47,10 @@ h1 {
 }
 
 #results {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   width: 100%;
    padding: 30px;
    font-size:20px;
    color:#142933;
@@ -60,9 +60,13 @@ h1 {
    border-width: 4px;
 }
 
+
+
 @media screen and (max-width: 600px) {
 
-img{max-width:75%;}
+img{
+	max-width:75%;
+}
 
 body {
    font-family: Verdana, Tahoma;
@@ -101,13 +105,13 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-   padding: 5%;
-   font-size:20px;
-   color:#142933;
-   background-color:#ffffff;
-   border-color:#559E67;
-   border-style: solid;
-   border-width: 4px;
+	padding: 5%;
+	font-size:20px;
+	color:#142933;
+	background-color:#ffffff;
+	border-color:#559E67;
+	border-style: solid;
+	border-width: 4px;
 }
 
 }
